...
                  },
                  style: ElevatedButton.styleFrom(
                    backgroundColor: const Color(0xFF86D069),
                    foregroundColor: Colors.black,
                    padding: const EdgeInsets.symmetric(horizontal: 24, vertical: 15),
                  ),
                  child: const Text('Sign In'),
                ),
                const SizedBox(width: 20),
                ElevatedButton(
                  onPressed: () {
                    Navigator.push(
                      context,
...
                  },
                  style: ElevatedButton.styleFrom(
                    backgroundColor: const Color(0xFF7EBADF),
                    foregroundColor: Colors.black,
                    padding: const EdgeInsets.symmetric(horizontal: 24, vertical: 15),
                  ),
                  child: const Text('Sign Up'),
                ),
              ],
            ),
          ],
        ),
      ),
...
